--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       Created with <a href="https://www.cocos.com/products" title="Cocos Creator">Cocos Creator</a>
     </p>
     <!-- Polyfills bundle. -->
-<script src="src/polyfills.bundle.5adbf.js" charset="utf-8"> </script>
+<script src="src/polyfills.bundle.b12d4.js" charset="utf-8"> </script>
 
 <!-- SystemJS support. -->
 <script src="src/system.bundle.543e6.js" charset="utf-8"> </script>
@@ -40,7 +40,7 @@
 <script src="src/import-map.7cbb9.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.a13e2.js').catch(function(err) { console.error(err); })
+    System.import('./index.c25ad.js').catch(function(err) { console.error(err); })
 </script>
   </body>
 </html>
